--- a/Coursera/IBM Data Analyst Professional Certificate/Databases and SQL for Data Science/Week 3/DB0201EN-Week3-1-1-Connecting-v4-py.ipynb
+++ b/Coursera/IBM Data Analyst Professional Certificate/Databases and SQL for Data Science/Week 3/DB0201EN-Week3-1-1-Connecting-v4-py.ipynb
@@ -77,14 +77,14 @@
    "outputs": [],
    "source": [
     "#Replace the placeholder values with your actual Db2 hostname, username, and password:\n",
-    "dsn_hostname = \"dashdb-txn-sbox-yp-dal09-14.services.dal.bluemix.net\" # e.g.: \"dashdb-txn-sbox-yp-dal09-04.services.dal.bluemix.net\"\n",
-    "dsn_uid = \"flb53894\"        # e.g. \"abc12345\"\n",
-    "dsn_pwd = \"301vrwx38t-zb9t2\"      # e.g. \"7dBZ3wWt9XN6$o0J\"\n",
-    "\n",
-    "dsn_driver = \"{IBM DB2 ODBC DRIVER}\"\n",
-    "dsn_database = \"BLUDB\"            # e.g. \"BLUDB\"\n",
-    "dsn_port = \"50000\"                # e.g. \"50000\" \n",
-    "dsn_protocol = \"TCPIP\"            # i.e. \"TCPIP\""
+    "# dsn_hostname = \"dashdb-txn-sbox-yp-dal09-14.services.dal.bluemix.net\" # e.g.: \"dashdb-txn-sbox-yp-dal09-04.services.dal.bluemix.net\"\n",
+    "# dsn_uid = \"flb53894\"        # e.g. \"abc12345\"\n",
+    "# dsn_pwd = \"301vrwx38t-zb9t2\"      # e.g. \"7dBZ3wWt9XN6$o0J\"\n",
+    "#\n",
+    "# dsn_driver = \"{IBM DB2 ODBC DRIVER}\"\n",
+    "# dsn_database = \"BLUDB\"            # e.g. \"BLUDB\"\n",
+    "# dsn_port = \"50000\"                # e.g. \"50000\"\n",
+    "# dsn_protocol = \"TCPIP\"            # i.e. \"TCPIP\""
    ]
   },
   {
