--- a/Coursera/IBM Data Analyst Professional Certificate/Databases and SQL for Data Science/Week 4/DB0201EN-Week4-1-1-RealDataPractice-v4-py.ipynb
+++ b/Coursera/IBM Data Analyst Professional Certificate/Databases and SQL for Data Science/Week 4/DB0201EN-Week4-1-1-RealDataPractice-v4-py.ipynb
@@ -93,7 +93,7 @@
    "source": [
     "# Enter the connection string for your Db2 on Cloud database instance below\n",
     "# %sql ibm_db_sa://my-username:my-password@my-hostname:my-port/my-db-name \n",
-    "%sql ibm_db_sa://flb53894:301vrwx38t-zb9t2@dashdb-txn-sbox-yp-dal09-14.services.dal.bluemix.net:50000/BLUDB;"
+    "# %sql ibm_db_sa://flb53894:301vrwx38t-zb9t2@dashdb-txn-sbox-yp-dal09-14.services.dal.bluemix.net:50000/BLUDB;"
    ]
   },
   {
