--- a/Coursera/IBM Data Analyst Professional Certificate/Databases and SQL for Data Science/Week 3/DB0201EN-Week3-1-2-Querying-v4-py.ipynb
+++ b/Coursera/IBM Data Analyst Professional Certificate/Databases and SQL for Data Science/Week 3/DB0201EN-Week3-1-2-Querying-v4-py.ipynb
@@ -78,14 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Replace the placeholder values with the actuals for your Db2 Service Credentials\n",
-    "# dsn_driver = \"{IBM DB2 ODBC DRIVER}\"\n",
-    "# dsn_database = \"BLUDB\"            # e.g. \"BLUDB\"\n",
-    "# dsn_hostname = \"dashdb-txn-sbox-yp-dal09-14.services.dal.bluemix.net\"            # e.g.: \"dashdb-txn-sbox-yp-dal09-04.services.dal.bluemix.net\"\n",
-    "# dsn_port = \"50000\"                    # e.g. \"50000\"\n",
-    "# dsn_protocol = \"TCPIP\"            # i.e. \"TCPIP\"\n",
-    "# dsn_uid = \"flb53894\"                 # e.g. \"abc12345\"\n",
-    "# dsn_pwd = \"301vrwx38t-zb9t2\"                 # e.g. \"7dBZ3wWt9XN6$o0J\""
+    "#Replace the placeholder values with the actuals for your Db2 Service Credentials"
    ]
   },
   {
